# Naive-Ray-Tracer

./: .gitignore  CMakeLists.txt  readme.md  run.sh
include/: camera.hpp  image.hpp  material.hpp  random_engine.hpp  scene_parser.hpp  vector.hpp
include/geometry/: bbox.hpp  geometry.hpp  group.hpp  mesh.h  mesh.hpp  object3d.hpp  plane.hpp  rectangle.hpp  sphere.hpp  transform.hpp  triangle.hpp
include/photon/: photon.hpp  photon_map.hpp
include/renderer/: camera.hpp  hit.hpp  light.hpp  material.hpp  ray.hpp  renderer.hpp
include/utils/: image.hpp  kdtree.hpp  octree.h  octree.hpp  random_engine.hpp  scene_parser.hpp  trans.hpp
include/vecmath/include/: Matrix2f.h  Matrix3f.h  Matrix4f.h  Quat4f.h  Vector2f.h  Vector3f.h  Vector4f.h
include/vecmath/src/: Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
scene/: apart_bunny.txt  basic_bunny.txt  final.txt  miku.txt
src/: main.cpp  mesh.cpp  octree.cpp  scene_parser.cpp
